--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "employee-tracker",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node index.js",
+    "mysql": "mysql -u root -p"
   },
   "keywords": [],
   "author": "Mila Decker",
